# pypixidev

./: pyproject.toml
src/pypixidev/: __init__.py
