[project]
authors = [{name = "Will Shanks", email = "wshaos@posteo.net"}]
dependencies = []
description = "Tool for generating a pixi dev environment for a non-pixi Python project"
name = "pypixidev"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pypixidev = { path = ".", editable = true }

[tool.pixi.tasks]
