[project]
authors = [{name = "Will Shanks", email = "wshaos@posteo.net"}]
dependencies = [
    "grayskull",
    "packaging",
    "ruamel.yaml",
]
description = "Tool for generating a pixi dev environment for a non-pixi Python project"
name = "pypixidev"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
pypixidev = "pypixidev:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pypixidev = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.test]
dependencies = {pudb = "*"}
tasks = { debug = "python -m pudb -m pypixidev"}

[tool.pixi.environments]
test = ["test"]

[tool.pixi.dependencies]
conda = "*"
